--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "lsr/laser-liga-api",
   "description": "Connection to the Laser Liga API",
   "type": "library",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "repositories": [
     {
       "type": "composer",
@@ -33,7 +33,9 @@
   },
   "require": {
     "php": "^8.4",
-    "psr/http-message": "^2"
+    "psr/http-message": "^2",
+    "zircote/swagger-php": "^5.0",
+    "lsr/orm": "^0.3.8"
   },
   "require-dev": {
     "roave/security-advisories": "dev-latest",
